adicionando footer y ajustes de estilo al main(seccion de posts)

--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
                 </div>        
             </div>
         </section>
-        <!-- pósts -->
+         <!-- pósts -->
         <section class="posts">
             <h1>Último blogposts</h1>
             <hr>
@@ -90,12 +90,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -103,12 +100,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -116,12 +110,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -129,12 +120,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -142,12 +130,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -155,12 +140,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -168,12 +150,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -181,12 +160,9 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
                 <article class="postUno">
                     <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
@@ -194,16 +170,15 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                        specimen book. 
                     </p>
+                    <a href="">Leer más</a>
                 </article>
             </div>
         </section>
     </main>
-
+    <footer>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+    </footer>
 </body>
 </html>
