ajustando el main y seccion de contacto, adiconando html y estilos en css

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/blogs.css">
     <link rel="stylesheet" href="css/blog.css">
     <title>Blog</title>
 </head>
@@ -41,21 +42,70 @@
         <nav>
             <ul>
                 <li>
-                    <!-- <a href="blog.html">
-                        <img src="assets/img/logos/Logo-blanco.png" alt="Mí Blog">
-                    </a> -->
+                    <a href="blog.html">
+                        <img src="assets/img/logos/Logo-negro.png" alt="Mí Blog">
+                    </a>
                 </li>
                 <li>
-                    <!-- <a href="perfil.html">Sobre mí </a> -->
+                    <a href="perfil.html">Sobre mí </a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
+        <div class="imagePost">
+            <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="imagne-Post">
+        </div>
+        <section class="postDescription">
+            <h3>Noticias</h3>
+            <hr>
+            <h1>Titulo del post</h1>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                a galley of type and scrambled it to make a type specimen book. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem labore minus atque eaque, ea explicabo! Veritatis, explicabo saepe praesentium, eveniet a quam alias obcaecati ullam fugiat, recusandae veniam nesciunt dolorem! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque facilis molestiae natus, odio repellat officiis reiciendis, alias adipisci eligendi soluta consequuntur cupiditate ipsa quidem doloribus aut velit voluptate quaerat laboriosam mollitia ullam ex quos praesentium aspernatur sapiente! Optio, nesciunt, at neque molestias veniam iste nostrum quisquam nisi, eligendi adipisci nam nemo recusandae eaque inventore quidem assumenda? Beatae labore modi expedita, inventore culpa libero cumque id ratione minima itaque, magnam fugiat dolores quidem tempore ducimus quia non, corrupti praesentium quas veritatis rerum! Explicabo nesciunt obcaecati non id! Dolore, iusto fugit assumenda ad natus atque. Modi, amet facilis. Iusto harum dolores ipsum? Facere exercitationem beatae eaque ipsa aspernatur excepturi delectus consectetur, porro rerum odit. Quibusdam fugiat doloribus dicta non quisquam ea, quaerat similique sapiente ex nisi rerum mollitia alias quasi asperiores earum dolorum temporibus, incidunt vero necessitatibus. Ipsam, quisquam. Perferendis qui, nihil eius distinctio consequuntur consectetur delectus iure reprehenderit, aspernatur, sint fugit.
+                Non, quod alias, nobis, enim eligendi reiciendis minima necessitatibus ut ipsum maiores et quidem consequatur aliquid ad. Reiciendis nihil vitae delectus rerum suscipit ullam, cupiditate eaque culpa aliquid! Magnam vel doloremque ratione voluptatibus consequuntur recusandae similique dicta rem corporis nulla quis perspiciatis totam autem officiis vitae suscipit rerum, labore architecto earum veritatis in, excepturi maxime nisi. Voluptatum odit a perspiciatis, beatae eos ducimus corrupti officia, consequatur error soluta sunt iusto reiciendis, nemo totam nesciunt aliquam vel modi molestiae dolore ipsum! Animi, amet earum ex possimus iste praesentium dolorum quam ratione in eaque placeat. Ab quos delectus praesentium facere recusandae, possimus nulla dolorem aliquid quasi porro quisquam dicta quae nobis dignissimos perferendis tenetur facilis exercitationem, magnam quibusdam voluptate in, veniam incidunt! Nesciunt rem ad nobis at maxime alias cumque voluptatem est, exercitationem adipisci fugit, dolore ducimus modi fuga dicta magnam id culpa iste ea enim velit architecto quia nam ex. Commodi? At, delectus! Quo, inventore optio fuga magnam veritatis tempore sapiente quaerat modi necessitatibus alias temporibus architecto ratione. Ipsa, vero sint animi ad iusto temporibus perferendis pariatur quisquam hic harum aliquid nobis officia magnam quia reiciendis minus quod ab sequi. Ab debitis iure molestias perspiciatis quia eaque beatae neque nostrum quibusdam, quisquam odio aliquid odit cum deleniti quidem maxime. At id dolorum repellat ratione, sequi quis natus nostrum in sapiente odit aut et temporibus, qui rerum sed illum animi velit excepturi. Nulla sequi corporis libero corrupti tempora, ratione, quae veniam molestiae quas asperiores voluptas, ipsam quaerat? Id accusamus aperiam obcaecati perspiciatis consequuntur cumque eum earum quas modi delectus, animi dignissimos rerum, dolores doloremque iste reprehenderit cum ex incidunt possimus quos. At eos aliquam iste adipisci atque, maiores, itaque excepturi, soluta ipsa similique deserunt nulla placeat sint. Eos, quibusdam distinctio harum placeat illo sed vero nesciunt aliquid id commodi rem! Delectus, sequi. In totam earum non fugit eaque magni illo tempore quibusdam tempora officiis quisquam velit sed nobis, minima corrupti nostrum architecto! Totam officiis consequatur facere accusamus odio fugit esse. Alias similique mollitia architecto eum nihil tempore beatae blanditiis dignissimos eos, voluptatibus repellendus eius quam ipsa molestiae sint vitae quidem saepe est. Vitae error minima rem praesentium quidem temporibus porro animi impedit itaque. Labore voluptate ratione ducimus sequi magnam reprehenderit minus dolorum possimus. Recusandae vel velit iure repellat natus praesentium odit totam, ipsa voluptate, temporibus tempora? Non culpa eligendi iure nobis ea eveniet laborum odio qui accusamus debitis in, doloribus consequatur. Pariatur tenetur fuga quaerat adipisci neque dolores omnis? Molestiae unde fugit natus dicta voluptas delectus ipsum mollitia quam eveniet doloremque, sapiente id modi reiciendis officia quibusdam perferendis fuga esse exercitationem nulla ratione enim amet debitis. Asperiores vel assumenda deleniti quae nulla ipsa accusamus facilis rem at, consequuntur alias animi, in architecto. Saepe nostrum illum reiciendis, iste autem illo incidunt vitae dolorem! Excepturi inventore odio sed veniam nisi ipsam. Iure saepe numquam ullam similique voluptas esse blanditiis aut eos quae earum explicabo quod non, tempora placeat repudiandae consectetur dolorem? Ullam, accusantium. Nostrum, eligendi, odio culpa eaque iusto delectus ducimus nobis repudiandae ullam nihil nulla laudantium, praesentium in reiciendis sequi accusantium at? Similique minus pariatur doloremque et eos officia impedit vel sunt hic architecto, at, nulla rem neque aut consequuntur libero veritatis iusto voluptatum asperiores repellendus? Necessitatibus dolorem sint voluptatum, fugit tenetur dolor velit temporibus earum modi sapiente laudantium neque. In sed dignissimos nihil dicta reprehenderit? Impedit laborum nemo blanditiis? Officiis minus, esse laudantium animi fuga rem enim unde dicta explicabo quas, inventore laboriosam nesciunt corrupti facere dolores adipisci! Minima quis alias labore ex quasi quae qui reiciendis, corrupti exercitationem molestiae, quod, eveniet blanditiis laudantium illum! Voluptatibus, ipsa maiores amet quis doloremque repellendus!
+            </p>
+            <p>
+                It has survived not only five centuries, but also the leap into electronic typesetting, 
+                remaining essentially unchanged. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore architecto accusantium natus harum consequuntur veritatis sunt ducimus quidem nam vel, modi magnam rem laborum reprehenderit possimus consectetur labore voluptatum quasi eaque omnis. Iure dignissimos ipsam, eos, temporibus iste magni necessitatibus quidem expedita, ex quo minima accusantium tempore quibusdam eligendi? Veniam molestias quisquam aliquam accusamus cupiditate, assumenda libero quam? Nostrum quam, error quidem aliquam cumque omnis eaque dolorum consequuntur. Culpa nostrum molestias reprehenderit modi ratione beatae doloribus libero deleniti tenetur, officiis dolor! Reprehenderit, cumque expedita ipsam ut vel omnis. Soluta repudiandae quas excepturi cupiditate consequatur? Debitis rem exercitationem quidem alias? Repellendus at illum odit corrupti eaque quas cupiditate minus saepe! Tempora suscipit consequuntur perferendis sed deleniti fugit quasi tenetur delectus debitis natus, nulla maxime, possimus quas dolore numquam aspernatur eaque atque facilis eum nostrum fuga? Corrupti ipsa voluptatem, incidunt iste commodi accusamus non quo quae, alias, minus veniam deserunt delectus! Consequuntur numquam consectetur error qui libero unde fugiat expedita ipsam, repellendus tempore corporis! Provident labore ea et quibusdam saepe veritatis perferendis debitis, nesciunt consequatur consectetur minima? Aspernatur distinctio magnam ab iusto soluta non dolor neque, maxime perspiciatis quis accusantium est animi repudiandae. Consequuntur pariatur maxime necessitatibus cupiditate eveniet, reprehenderit quia? Fugiat totam pariatur praesentium repellendus! Provident dignissimos optio assumenda sit perspiciatis aut eius, temporibus vitae nostrum? Accusantium voluptatum error in repellat mollitia quidem natus. Esse incidunt, voluptate sunt vel rerum hic deserunt reiciendis dolore rem a laboriosam possimus nostrum eum quis nam neque, maiores recusandae velit minima distinctio quibusdam ea!.
+            </p>
+            <p>
+                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
+                passages, and more recently with desktop publishing software like Aldus PageMaker including 
+                versions of Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima at magnam enim esse nobis earum cupiditate cum nesciunt exercitationem in.Sequi illum, eaque, soluta facilis qui accusamus iure, quod velit animi dolore numquam tenetur? Delectus, iure sint? Natus, repellendus velit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non et reprehenderit alias fugiat eaque dolorum quo quae recusandae doloribus enim.Impedit harum debitis voluptas odio officiis. Quam eaque deleniti eum! Rerum sapiente quasi eveniet ex atque, inventore corporis accusamus praesentium.Laudantium praesentium dolore accusantium qui sequi sit exercitationem necessitatibus voluptate, enim natus iste adipisci, eaque facilis, officia suscipit minus aliquid!Deleniti quidem unde asperiores amet animi, eos eveniet quia accusantium molestiae aliquam consequatur. Voluptatem facere, assumenda facilis odio cupiditate nam! Vel quo recusandae molestias fugiat! Soluta pariatur illo vitae aliquid exercitationem, voluptatum tenetur eligendi veniam magni beatae fuga vel quidem!
 
+            </p>
+        </section>
     </main>
+    <section class="contac">
+        <div class="contacMe">
+            <div class="logoContacMe">
+                <img src="assets/iconos/iconosBlog/006-like.svg" alt="contac">
+            </div>
+            <div class="descriptionContacMe">
+                <a href="">Contacto</a>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                </p>
+            </div>
+        </div>
+        <div class="opinion">
+            <div class="descriptionContacMe">
+                <a href="">Escribe</a>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                </p>
+            </div>
+            <div class="logoOpinion">
+                <img src="assets/iconos/iconosBlog/013-newsletter.svg" alt="apinion">
+            </div>
+        </div>
+    </section>
     <footer>
-        
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
     </footer>
 </body>
 </html>
